Refactor TSID long to TSID String